// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TITLES IN ALL CAPS are fixed 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
        Why Am I Shouting
      </h1>
      

      <div
        class="engrafo-metadata"
      >
        
  
        <div
          class="authors"
        >
          
    
        </div>
        
  
        <div
          class="engrafo-metadata-custom"
        />
        

      </div>
      


      <h2
        id="section-1"
      >
        <span
          class="section-number"
        >
          <a
            href="#section-1"
          >
            1
          </a>
        </span>
        Urgh Stop It
      </h2>
      

      <p>
        Hello.
      </p>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`bold is stripped from title 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    

    <dt-article>
      

      <h1>
         Why would someone do this
      </h1>
      

      <div
        class="engrafo-metadata"
      >
        
  
        <div
          class="authors"
        >
          
    
        </div>
        
  
        <div
          class="engrafo-metadata-custom"
        />
        

      </div>
      


      <p>
        Hello.
      </p>
      

    </dt-article>
    

    <dt-appendix>
      

      


      <div
        class="l-body"
      />
      

    </dt-appendix>
    



    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
